# supso-project-python

./: .gitignore  LICENSE-APACHE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/supso/: __init__.py  certificate.py  errors.py  keys.py  license.py  verify.py
tests/: test_conformance.py
